--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,5 +5,6 @@ passlib==1.7.4
 Pillow==9.4.0
 pymongo==4.3.3
 Requests==2.28.2
-tensorflow==2.12.0
+tensorflow==2.10.1
 uvicorn==0.21.1
+pytest==7.3.1
