--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -15,12 +15,12 @@ jobs:
 
       - name: Install requirements
         run: |
-          pip install -r $GITHUB_WORKSPACE/requirements.txt
+          pip install -r app/requirements.txt
 
       - name: Run tests database
         run: |
-          pytest $GITHUB_WORKSPACE/test/database_test.py
+          pytest test/database_test.py
 
       - name: Run tests predict
         run: |
-          pytest $GITHUB_WORKSPACE/test/predict_test.py
+          pytest test/predict_test.py
