--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -17,6 +17,10 @@ jobs:
         run: |
           pip install -r app/requirements.txt
 
+      - name: Run API
+        run: |
+          uvicorn api.main:api --reload
+
       - name: Run tests database
         run: |
           pytest test/database_test.py
