--- a/app/predict/mlruns/622132443712942447/aa3fab63ad6240fc84e90a504f62f96e/meta.yaml
+++ b/app/predict/mlruns/622132443712942447/aa3fab63ad6240fc84e90a504f62f96e/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: file:///D:/Documents/Datascientest/MLOps/projet/MLOps_ChampiPy/app/predict/mlruns/622132443712942447/aa3fab63ad6240fc84e90a504f62f96e/artifacts
+deleted_time: 1683638628311
 end_time: 1682712159920
 entry_point_name: ''
 experiment_id: '622132443712942447'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: aa3fab63ad6240fc84e90a504f62f96e
 run_name: grandiose-worm-726
 run_uuid: aa3fab63ad6240fc84e90a504f62f96e
