--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -2,7 +2,7 @@ name: Pytest control Predict, Database and API
 on: push
 
 env:
-  bdd_connex_str: ${{ vars.BDD_CONNEX_STR }}
+  bdd_connex_str: ${{ secrets.BDD_CONNEX_STR }}
 
 jobs:
   control-app:
